accelerated-domains: add circleharmonyhealth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20624,6 +20624,7 @@ server=/cipscom.com/114.114.114.114
 server=/cipukj.com/114.114.114.114
 server=/cipunited.com/114.114.114.114
 server=/circday.com/114.114.114.114
+server=/circleharmonyhealth.com/114.114.114.114
 server=/circuitboardchips.com/114.114.114.114
 server=/cirmall.com/114.114.114.114
 server=/cirrowings.com/114.114.114.114
