--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20681,6 +20681,7 @@ server=/cityhui.com/114.114.114.114
 server=/cityhuitech.com/114.114.114.114
 server=/citylinker.com/114.114.114.114
 server=/citypaly.com/114.114.114.114
+server=/citys114.com/114.114.114.114
 server=/citysbs.com/114.114.114.114
 server=/citysz.net/114.114.114.114
 server=/citytogo.com/114.114.114.114
