accelerated-domains: add ciyitech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20708,6 +20708,7 @@ server=/cixiucn.com/114.114.114.114
 server=/cixtech.com/114.114.114.114
 server=/cixuanfuw.com/114.114.114.114
 server=/ciyew.com/114.114.114.114
+server=/ciyitech.com/114.114.114.114
 server=/ciyocon.com/114.114.114.114
 server=/ciyuan.men/114.114.114.114
 server=/ciyuanji.com/114.114.114.114
