--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20734,6 +20734,7 @@ server=/cjgcedu.com/114.114.114.114
 server=/cjhb168.com/114.114.114.114
 server=/cjhospital.com/114.114.114.114
 server=/cjhxfund.com/114.114.114.114
+server=/cjhydrogen.com/114.114.114.114
 server=/cjieh.com/114.114.114.114
 server=/cjienc.com/114.114.114.114
 server=/cjiit.com/114.114.114.114
