--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20789,6 +20789,7 @@ server=/cjsy.net/114.114.114.114
 server=/cjsyedu.com/114.114.114.114
 server=/cjtmsp.com/114.114.114.114
 server=/cjveg.com/114.114.114.114
+server=/cjwcjyy.com/114.114.114.114
 server=/cjwlb.com/114.114.114.114
 server=/cjx2.com/114.114.114.114
 server=/cjxwr.com/114.114.114.114
