--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21332,6 +21332,7 @@ server=/cn-soft.com/114.114.114.114
 server=/cn-truck.com/114.114.114.114
 server=/cn-visa.com/114.114.114.114
 server=/cn-weida.com/114.114.114.114
+server=/cn-witmed.com/114.114.114.114
 server=/cn-zhentai.com/114.114.114.114
 server=/cn.bing.com/114.114.114.114
 server=/cn.bing.net/114.114.114.114
