accelerated-domains: add cnmarathon.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21762,6 +21762,7 @@ server=/cnlso.com/114.114.114.114
 server=/cnluolun.com/114.114.114.114
 server=/cnmanhua.com/114.114.114.114
 server=/cnmansi.com/114.114.114.114
+server=/cnmarathon.net/114.114.114.114
 server=/cnmarinefan.com/114.114.114.114
 server=/cnmattson.com/114.114.114.114
 server=/cnmdy.com/114.114.114.114
