--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21796,6 +21796,7 @@ server=/cnnage.com/114.114.114.114
 server=/cnnaihuo.com/114.114.114.114
 server=/cnnb.com/114.114.114.114
 server=/cnnbfdc.com/114.114.114.114
+server=/cnncbhy.com/114.114.114.114
 server=/cnncguilin.com/114.114.114.114
 server=/cnndns.com/114.114.114.114
 server=/cnnetsec.com/114.114.114.114
