--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21922,6 +21922,7 @@ server=/cnsoc.org/114.114.114.114
 server=/cnsoe.com/114.114.114.114
 server=/cnsoftbei.com/114.114.114.114
 server=/cnsoftnews.com/114.114.114.114
+server=/cnsolarwind.com/114.114.114.114
 server=/cnsolomo.com/114.114.114.114
 server=/cnsorl.com/114.114.114.114
 server=/cnspeed.com/114.114.114.114
