accelerated-domains: add cnste.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21930,6 +21930,7 @@ server=/cnspeedtest.com/114.114.114.114
 server=/cnspeedtest.net/114.114.114.114
 server=/cnsphoto.com/114.114.114.114
 server=/cnssssl.com/114.114.114.114
+server=/cnste.org/114.114.114.114
 server=/cnstock.com/114.114.114.114
 server=/cnsudong.com/114.114.114.114
 server=/cnsug.com/114.114.114.114
