--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21942,6 +21942,7 @@ server=/cnswds.com/114.114.114.114
 server=/cnswy.net/114.114.114.114
 server=/cnsynews.com/114.114.114.114
 server=/cnsz.org/114.114.114.114
+server=/cnszjlt.com/114.114.114.114
 server=/cnszxw.com/114.114.114.114
 server=/cnszyzz.com/114.114.114.114
 server=/cntagore.com/114.114.114.114
