--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22003,6 +22003,7 @@ server=/cnwinenews.com/114.114.114.114
 server=/cnwnews.com/114.114.114.114
 server=/cnwsgj.com/114.114.114.114
 server=/cnwtn.com/114.114.114.114
+server=/cnwutong.com/114.114.114.114
 server=/cnwuye.com/114.114.114.114
 server=/cnww1985.com/114.114.114.114
 server=/cnwxw.com/114.114.114.114
