accelerated-domains: add cominbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22296,6 +22296,7 @@ server=/comicfans.net/114.114.114.114
 server=/comicv.com/114.114.114.114
 server=/comicyu.com/114.114.114.114
 server=/comiis.com/114.114.114.114
+server=/cominbio.com/114.114.114.114
 server=/comingchina.com/114.114.114.114
 server=/comlan.com/114.114.114.114
 server=/comlbs.com/114.114.114.114
