accelerated-domains: add cpuh2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22608,6 +22608,7 @@ server=/cpu114.com/114.114.114.114
 server=/cpu668.com/114.114.114.114
 server=/cpubbs.com/114.114.114.114
 server=/cpudj.com/114.114.114.114
+server=/cpuh2.com/114.114.114.114
 server=/cpury.com/114.114.114.114
 server=/cpuxn.com/114.114.114.114
 server=/cpvjob.com/114.114.114.114
