--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22623,6 +22623,7 @@ server=/cq-wnl.com/114.114.114.114
 server=/cq315house.com/114.114.114.114
 server=/cq3a.com/114.114.114.114
 server=/cq5135.com/114.114.114.114
+server=/cq5y.com/114.114.114.114
 server=/cq6.com/114.114.114.114
 server=/cq69.com/114.114.114.114
 server=/cq6969.com/114.114.114.114
