accelerated-domains: add cqhjyzl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22693,6 +22693,7 @@ server=/cqhbzh.com/114.114.114.114
 server=/cqhcbk.com/114.114.114.114
 server=/cqhhm.com/114.114.114.114
 server=/cqhimalayanky.com/114.114.114.114
+server=/cqhjyzl.com/114.114.114.114
 server=/cqhkcdns.com/114.114.114.114
 server=/cqhpoldi.com/114.114.114.114
 server=/cqhwr.com/114.114.114.114
