--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22791,6 +22791,7 @@ server=/cqslim.net/114.114.114.114
 server=/cqsmls.com/114.114.114.114
 server=/cqsms.net/114.114.114.114
 server=/cqsoft.org/114.114.114.114
+server=/cqsongshan.com/114.114.114.114
 server=/cqsta.com/114.114.114.114
 server=/cqswxcy.com/114.114.114.114
 server=/cqsxedu.com/114.114.114.114
