accelerated-domains: add cqszfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22795,6 +22795,7 @@ server=/cqsongshan.com/114.114.114.114
 server=/cqsta.com/114.114.114.114
 server=/cqswxcy.com/114.114.114.114
 server=/cqsxedu.com/114.114.114.114
+server=/cqszfy.com/114.114.114.114
 server=/cqsztech.com/114.114.114.114
 server=/cqt-top.com/114.114.114.114
 server=/cqtally.co/114.114.114.114
