--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22922,6 +22922,7 @@ server=/createcdigital.com/114.114.114.114
 server=/createwf.com/114.114.114.114
 server=/creati5.com/114.114.114.114
 server=/creationventure.com/114.114.114.114
+server=/creative-micro.com/114.114.114.114
 server=/creator-sh.com/114.114.114.114
 server=/creavidia.com/114.114.114.114
 server=/crec4.com/114.114.114.114
