--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22945,6 +22945,7 @@ server=/crepcrep.com/114.114.114.114
 server=/creplus.net/114.114.114.114
 server=/cresqoirz.com/114.114.114.114
 server=/crestv.com/114.114.114.114
+server=/cret-bio.com/114.114.114.114
 server=/crewcn.com/114.114.114.114
 server=/crfchina.com/114.114.114.114
 server=/crfsdi.com/114.114.114.114
