--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23160,6 +23160,7 @@ server=/cssbe.com/114.114.114.114
 server=/cssbkj.com/114.114.114.114
 server=/cssbyy.com/114.114.114.114
 server=/csscmall.com/114.114.114.114
+server=/cssdsyy.com/114.114.114.114
 server=/csseplastic.com/114.114.114.114
 server=/cssf.com/114.114.114.114
 server=/cssf.net/114.114.114.114
