--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23175,6 +23175,7 @@ server=/cssmagic.net/114.114.114.114
 server=/cssmoban.com/114.114.114.114
 server=/cssqt.com/114.114.114.114
 server=/csstoday.net/114.114.114.114
+server=/cssuez.com/114.114.114.114
 server=/cssyzxx.com/114.114.114.114
 server=/csszone.net/114.114.114.114
 server=/cst119.com/114.114.114.114
