--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23258,6 +23258,7 @@ server=/ctcnn.com/114.114.114.114
 server=/ctcnpa.com/114.114.114.114
 server=/ctcontents.com/114.114.114.114
 server=/ctcsci.com/114.114.114.114
+server=/ctcsz.com/114.114.114.114
 server=/ctcwri.org/114.114.114.114
 server=/ctdcn.com/114.114.114.114
 server=/ctdisk.com/114.114.114.114
