--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23485,6 +23485,7 @@ server=/cvtapi.com/114.114.114.114
 server=/cvte.com/114.114.114.114
 server=/cvtoutiao.com/114.114.114.114
 server=/cvtvcn.com/114.114.114.114
+server=/cwag.com/114.114.114.114
 server=/cwan.com/114.114.114.114
 server=/cwbaike.com/114.114.114.114
 server=/cwbpsi.com/114.114.114.114
