accelerated-domains: add cwmzyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23502,6 +23502,7 @@ server=/cwliupaotea.com/114.114.114.114
 server=/cwmcs.com/114.114.114.114
 server=/cwmlm.com/114.114.114.114
 server=/cwmtn.com/114.114.114.114
+server=/cwmzyyy.com/114.114.114.114
 server=/cwq.com/114.114.114.114
 server=/cwtc.com/114.114.114.114
 server=/cwxzx.com/114.114.114.114
