accelerated-domains: add cylh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23669,6 +23669,7 @@ server=/cyk-cable.com/114.114.114.114
 server=/cykjgx.com/114.114.114.114
 server=/cyktqdrp.com/114.114.114.114
 server=/cylaowu.com/114.114.114.114
+server=/cylh.com/114.114.114.114
 server=/cylink.bond/114.114.114.114
 server=/cylong.com/114.114.114.114
 server=/cynee.net/114.114.114.114
