--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23692,6 +23692,7 @@ server=/cys.world/114.114.114.114
 server=/cysq.com/114.114.114.114
 server=/cystool.com/114.114.114.114
 server=/cysy-cn.com/114.114.114.114
+server=/cyszxyy.com/114.114.114.114
 server=/cyt369.com/114.114.114.114
 server=/cytcard.com/114.114.114.114
 server=/cyts.com/114.114.114.114
