--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23758,6 +23758,7 @@ server=/czdqyy.com/114.114.114.114
 server=/czdrbz.com/114.114.114.114
 server=/czdsfy.com/114.114.114.114
 server=/czduxinban.com/114.114.114.114
+server=/czdyrmyy.com/114.114.114.114
 server=/czech-visacenter.com/114.114.114.114
 server=/czedu.com/114.114.114.114
 server=/czepb.com/114.114.114.114
