--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23766,6 +23766,7 @@ server=/czfcdp.com/114.114.114.114
 server=/czfcw.com/114.114.114.114
 server=/czfdc.com/114.114.114.114
 server=/czfesco-mg.com/114.114.114.114
+server=/czfhdmls.com/114.114.114.114
 server=/czgcsb.com/114.114.114.114
 server=/czgd.tv/114.114.114.114
 server=/czgdgs.net/114.114.114.114
