--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23853,6 +23853,7 @@ server=/czxuexi.com/114.114.114.114
 server=/czxy.com/114.114.114.114
 server=/czxztq.xyz/114.114.114.114
 server=/czyabo.com/114.114.114.114
+server=/czyefy.com/114.114.114.114
 server=/czyfxd.com/114.114.114.114
 server=/czyl.cc/114.114.114.114
 server=/czyongfeng.com/114.114.114.114
