--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24063,6 +24063,7 @@ server=/dahulu.com/114.114.114.114
 server=/dahuodong.com/114.114.114.114
 server=/dai-xi.com/114.114.114.114
 server=/dai361.com/114.114.114.114
+server=/daiaotech.com/114.114.114.114
 server=/daibanke.com/114.114.114.114
 server=/daibi.com/114.114.114.114
 server=/daichuqu.com/114.114.114.114
