--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24574,6 +24574,7 @@ server=/dayesmart.com/114.114.114.114
 server=/dayezheng.com/114.114.114.114
 server=/dayhao.com/114.114.114.114
 server=/dayhr.com/114.114.114.114
+server=/dayi100.com/114.114.114.114
 server=/dayichang.com/114.114.114.114
 server=/dayifund.org/114.114.114.114
 server=/dayihangqing.com/114.114.114.114
