--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25261,6 +25261,7 @@ server=/dfzbsh.com/114.114.114.114
 server=/dfzk.com/114.114.114.114
 server=/dfzmzyc.com/114.114.114.114
 server=/dfzxvip.com/114.114.114.114
+server=/dfzyxy.net/114.114.114.114
 server=/dg-360lhx.com/114.114.114.114
 server=/dg-hanxin.com/114.114.114.114
 server=/dg-mall.com/114.114.114.114
