--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25267,6 +25267,7 @@ server=/dg-hanxin.com/114.114.114.114
 server=/dg-mall.com/114.114.114.114
 server=/dg-niuniu.com/114.114.114.114
 server=/dg-paas.com/114.114.114.114
+server=/dg-tcm.com/114.114.114.114
 server=/dg11185.com/114.114.114.114
 server=/dg114.com/114.114.114.114
 server=/dg121.com/114.114.114.114
