--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25292,6 +25292,7 @@ server=/dggdk.com/114.114.114.114
 server=/dgggs.com/114.114.114.114
 server=/dgghy.com/114.114.114.114
 server=/dggjqw.com/114.114.114.114
+server=/dggjyy.com/114.114.114.114
 server=/dggywx.com/114.114.114.114
 server=/dghgzm.com/114.114.114.114
 server=/dghobo17.com/114.114.114.114
