--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25988,6 +25988,7 @@ server=/djfrj.com/114.114.114.114
 server=/djgy.com/114.114.114.114
 server=/djhdfhsdjh256.vip/114.114.114.114
 server=/djhxn.com/114.114.114.114
+server=/djiang.net/114.114.114.114
 server=/djiavip.com/114.114.114.114
 server=/djjgj.com/114.114.114.114
 server=/djjlseo.com/114.114.114.114
