accelerated-domains: add dlzxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26148,6 +26148,7 @@ server=/dlzb.com/114.114.114.114
 server=/dlzbxx.com/114.114.114.114
 server=/dlzs-audio.com/114.114.114.114
 server=/dlztb.com/114.114.114.114
+server=/dlzxyy.com/114.114.114.114
 server=/dlzyc.com/114.114.114.114
 server=/dm004.net/114.114.114.114
 server=/dm0775.com/114.114.114.114
