--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26420,6 +26420,7 @@ server=/dodoh5.com/114.114.114.114
 server=/dodomh.com/114.114.114.114
 server=/dodonew.com/114.114.114.114
 server=/dodovip.com/114.114.114.114
+server=/doercn.com/114.114.114.114
 server=/doergob.com/114.114.114.114
 server=/doerhr.com/114.114.114.114
 server=/doerjob.com/114.114.114.114
