accelerated-domains: add dogain.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26428,6 +26428,7 @@ server=/doerjobdata.com/114.114.114.114
 server=/doffry.com/114.114.114.114
 server=/dofolong.com/114.114.114.114
 server=/dog-e-clothing.com/114.114.114.114
+server=/dogain.com/114.114.114.114
 server=/doganinsaatemlak.com/114.114.114.114
 server=/dogecast.com/114.114.114.114
 server=/dogecdn.com/114.114.114.114
