--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26473,6 +26473,7 @@ server=/dolphin-browser.com/114.114.114.114
 server=/dolphin.com/114.114.114.114
 server=/dolphinphp.com/114.114.114.114
 server=/dom-3d.net/114.114.114.114
+server=/domabio.com/114.114.114.114
 server=/domaingz.com/114.114.114.114
 server=/domaintescil.com/114.114.114.114
 server=/domengle.com/114.114.114.114
