accelerated-domains: add dousonvalve.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26753,6 +26753,7 @@ server=/doupocangqiong1.com/114.114.114.114
 server=/douqi.com/114.114.114.114
 server=/doushen.com/114.114.114.114
 server=/doushisan.com/114.114.114.114
+server=/dousonvalve.com/114.114.114.114
 server=/doutian.me/114.114.114.114
 server=/doutianshequ.com/114.114.114.114
 server=/doutub.com/114.114.114.114
