accelerated-domains: add dtssyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27141,6 +27141,7 @@ server=/dtnews.net/114.114.114.114
 server=/dtrcb.com/114.114.114.114
 server=/dts007.com/114.114.114.114
 server=/dtsmndu.com/114.114.114.114
+server=/dtssyy.com/114.114.114.114
 server=/dtstack.com/114.114.114.114
 server=/dtstatic.com/114.114.114.114
 server=/dtston.com/114.114.114.114
