--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27420,6 +27420,7 @@ server=/dushewang.com/114.114.114.114
 server=/dushicn.com/114.114.114.114
 server=/dushifen.com/114.114.114.114
 server=/dushiliren.net/114.114.114.114
+server=/dushiquan.net/114.114.114.114
 server=/dushu.com/114.114.114.114
 server=/dushu.io/114.114.114.114
 server=/dushu263.com/114.114.114.114
