accelerated-domains: add dwgbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27481,6 +27481,7 @@ server=/dvsadive.com/114.114.114.114
 server=/dvvvs.com/114.114.114.114
 server=/dw4.co/114.114.114.114
 server=/dwdds.com/114.114.114.114
+server=/dwgbj.com/114.114.114.114
 server=/dwgwatch.com/114.114.114.114
 server=/dwhub.net/114.114.114.114
 server=/dwhut.com/114.114.114.114
