--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27482,6 +27482,7 @@ server=/dvvvs.com/114.114.114.114
 server=/dw4.co/114.114.114.114
 server=/dwdds.com/114.114.114.114
 server=/dwgbj.com/114.114.114.114
+server=/dwgszc.com/114.114.114.114
 server=/dwgwatch.com/114.114.114.114
 server=/dwhub.net/114.114.114.114
 server=/dwhut.com/114.114.114.114
