--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27594,6 +27594,7 @@ server=/dxzx.com/114.114.114.114
 server=/dxzy163.com/114.114.114.114
 server=/dxzzd.com/114.114.114.114
 server=/dy-bus.com/114.114.114.114
+server=/dy-hospital.com/114.114.114.114
 server=/dy163.cc/114.114.114.114
 server=/dy172.com/114.114.114.114
 server=/dy1905.net/114.114.114.114
