--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27863,6 +27863,7 @@ server=/e2esoft.com/114.114.114.114
 server=/e2say.com/114.114.114.114
 server=/e360e.com/114.114.114.114
 server=/e365mall.com/114.114.114.114
+server=/e3861.com/114.114.114.114
 server=/e399.com/114.114.114.114
 server=/e3j.co/114.114.114.114
 server=/e3ol.com/114.114.114.114
