--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27982,6 +27982,7 @@ server=/eastled.com/114.114.114.114
 server=/eastlen.com/114.114.114.114
 server=/eastlending.com/114.114.114.114
 server=/eastmannplastics.com/114.114.114.114
+server=/eastmarathon.com/114.114.114.114
 server=/eastmoney.com/114.114.114.114
 server=/eastmoneyfutures.com/114.114.114.114
 server=/eastmoneyloans.com/114.114.114.114
