--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27991,6 +27991,7 @@ server=/eastobacco.com/114.114.114.114
 server=/eastpharm.com/114.114.114.114
 server=/eastsilver.com/114.114.114.114
 server=/eastsoo.com/114.114.114.114
+server=/eaststarbio.com/114.114.114.114
 server=/easttone.com/114.114.114.114
 server=/eastups.com/114.114.114.114
 server=/eastwin-zc.com/114.114.114.114
