--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28506,6 +28506,7 @@ server=/effirst.com/114.114.114.114
 server=/effood.net/114.114.114.114
 server=/efgh11.com/114.114.114.114
 server=/efivestar.com/114.114.114.114
+server=/efl-tech.com/114.114.114.114
 server=/efly.cc/114.114.114.114
 server=/eflybird.com/114.114.114.114
 server=/eflycloud.com/114.114.114.114
