--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29234,6 +29234,7 @@ server=/essca.com/114.114.114.114
 server=/essclick.com/114.114.114.114
 server=/essemi.com/114.114.114.114
 server=/essencefund.com/114.114.114.114
+server=/esseniot.com/114.114.114.114
 server=/ession.com/114.114.114.114
 server=/essjj.com/114.114.114.114
 server=/esstglobal.com/114.114.114.114
