--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29235,6 +29235,7 @@ server=/essclick.com/114.114.114.114
 server=/essemi.com/114.114.114.114
 server=/essencefund.com/114.114.114.114
 server=/esseniot.com/114.114.114.114
+server=/essent-tech.com/114.114.114.114
 server=/ession.com/114.114.114.114
 server=/essjj.com/114.114.114.114
 server=/esstglobal.com/114.114.114.114
