--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29405,6 +29405,7 @@ server=/evening.me/114.114.114.114
 server=/ever9527.com/114.114.114.114
 server=/everbaas.com/114.114.114.114
 server=/everbox.net/114.114.114.114
+server=/everbrightphotonics.com/114.114.114.114
 server=/everdns.com/114.114.114.114
 server=/evereasycom.com/114.114.114.114
 server=/everedit.net/114.114.114.114
