--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29416,6 +29416,7 @@ server=/evergrandeservice.com/114.114.114.114
 server=/evergreen-plastics.com/114.114.114.114
 server=/everisker.com/114.114.114.114
 server=/everknight.net/114.114.114.114
+server=/everlight-space.com/114.114.114.114
 server=/evernakedcake.com/114.114.114.114
 server=/eversino.com/114.114.114.114
 server=/everstar.xyz/114.114.114.114
