--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29461,6 +29461,7 @@ server=/ewaga.com/114.114.114.114
 server=/ewang.com/114.114.114.114
 server=/ewaninfo.com/114.114.114.114
 server=/ewarecomputer.com/114.114.114.114
+server=/ewaterchina.com/114.114.114.114
 server=/ewatt.com/114.114.114.114
 server=/ewceo.com/114.114.114.114
 server=/ewdcloud.com/114.114.114.114
