accelerated-domains: add exceedconn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29518,6 +29518,7 @@ server=/excake.com/114.114.114.114
 server=/excalibur.link/114.114.114.114
 server=/excbio.com/114.114.114.114
 server=/excean.com/114.114.114.114
+server=/exceedconn.com/114.114.114.114
 server=/excegroup.com/114.114.114.114
 server=/excel8.com/114.114.114.114
 server=/excel880.com/114.114.114.114
