accelerated-domains: add fchospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30276,6 +30276,7 @@ server=/fcgzjchy.com/114.114.114.114
 server=/fcgzph.com/114.114.114.114
 server=/fcgzrkq.com/114.114.114.114
 server=/fcgzrzyqxyj.com/114.114.114.114
+server=/fchospital.com/114.114.114.114
 server=/fcjjdbsc.com/114.114.114.114
 server=/fcjob.net/114.114.114.114
 server=/fcjob88.com/114.114.114.114
