--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30313,6 +30313,7 @@ server=/fczhongwang.com/114.114.114.114
 server=/fczlsc.com/114.114.114.114
 server=/fczx.com/114.114.114.114
 server=/fd-trust.com/114.114.114.114
+server=/fd-yy.com/114.114.114.114
 server=/fd7c.com/114.114.114.114
 server=/fd80.com/114.114.114.114
 server=/fd80s.com/114.114.114.114
