--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30342,6 +30342,7 @@ server=/fdx-fund.com/114.114.114.114
 server=/fdxww.com/114.114.114.114
 server=/fdxxjs.com/114.114.114.114
 server=/fdzq.com/114.114.114.114
+server=/fdzyy.com/114.114.114.114
 server=/fdzzjs.com/114.114.114.114
 server=/fe-cable.com/114.114.114.114
 server=/fe2x.cc/114.114.114.114
