accelerated-domains: add fineforming.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30875,6 +30875,7 @@ server=/findyou.xin/114.114.114.114
 server=/findzd.com/114.114.114.114
 server=/finebey.com/114.114.114.114
 server=/finebi.com/114.114.114.114
+server=/fineforming.com/114.114.114.114
 server=/fineidc.com/114.114.114.114
 server=/finelybook.com/114.114.114.114
 server=/finer2.com/114.114.114.114
