--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30881,6 +30881,7 @@ server=/finelybook.com/114.114.114.114
 server=/finer2.com/114.114.114.114
 server=/finereport.com/114.114.114.114
 server=/finereporthelp.com/114.114.114.114
+server=/fineset.com/114.114.114.114
 server=/finetopix.com/114.114.114.114
 server=/fineui.com/114.114.114.114
 server=/finewatchcare.com/114.114.114.114
