accelerated-domains: add first-swg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30927,6 +30927,7 @@ server=/firetry.com/114.114.114.114
 server=/fireval.com/114.114.114.114
 server=/firevale.com/114.114.114.114
 server=/firhq.com/114.114.114.114
+server=/first-swg.com/114.114.114.114
 server=/firstarpc.com/114.114.114.114
 server=/firstcityfashion.com/114.114.114.114
 server=/firstdrs.com/114.114.114.114
