accelerated-domains: add fjsdsrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31048,6 +31048,7 @@ server=/fjqionghai.com/114.114.114.114
 server=/fjqunyi.com/114.114.114.114
 server=/fjrmyy.com/114.114.114.114
 server=/fjsdn.com/114.114.114.114
+server=/fjsdsrmyy.com/114.114.114.114
 server=/fjsen.com/114.114.114.114
 server=/fjsfa.org/114.114.114.114
 server=/fjsfy.com/114.114.114.114
