--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31165,6 +31165,7 @@ server=/flowinnglobal.com/114.114.114.114
 server=/flowlbkj.com/114.114.114.114
 server=/flowportal.com/114.114.114.114
 server=/flowtechgd.com/114.114.114.114
+server=/flowtechsh.com/114.114.114.114
 server=/flpsz.com/114.114.114.114
 server=/flpwb.com/114.114.114.114
 server=/flqhd.com/114.114.114.114
