accelerated-domains: add flqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31169,6 +31169,7 @@ server=/flowtechsh.com/114.114.114.114
 server=/flpsz.com/114.114.114.114
 server=/flpwb.com/114.114.114.114
 server=/flqhd.com/114.114.114.114
+server=/flqrmyy.com/114.114.114.114
 server=/flsrp.com/114.114.114.114
 server=/flstudiochina.com/114.114.114.114
 server=/fltau.com/114.114.114.114
