--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31473,6 +31473,7 @@ server=/founpad.com/114.114.114.114
 server=/fountask.com/114.114.114.114
 server=/four-faith.com/114.114.114.114
 server=/fourco-inc.com/114.114.114.114
+server=/fourfaithwater.com/114.114.114.114
 server=/fovmy.com/114.114.114.114
 server=/fovtedt.com/114.114.114.114
 server=/fow.ink/114.114.114.114
