--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31515,6 +31515,7 @@ server=/fpwap.com/114.114.114.114
 server=/fpwjq.com/114.114.114.114
 server=/fpxz.net/114.114.114.114
 server=/fpyjy.com/114.114.114.114
+server=/fpyy120.com/114.114.114.114
 server=/fq688.com/114.114.114.114
 server=/fqapps.com/114.114.114.114
 server=/fqcqf.com/114.114.114.114
