accelerated-domains: add fssdbjyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31718,6 +31718,7 @@ server=/fspinqiu.com/114.114.114.114
 server=/fspxgjx.com/114.114.114.114
 server=/fsqiangfengzy.com/114.114.114.114
 server=/fsruibin.com/114.114.114.114
+server=/fssdbjyy.com/114.114.114.114
 server=/fsshenneng.com/114.114.114.114
 server=/fsspc.com/114.114.114.114
 server=/fssptjj.com/114.114.114.114
