accelerated-domains: add ftdevice.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31763,6 +31763,7 @@ server=/ftcauction.com/114.114.114.114
 server=/ftcgj.com/114.114.114.114
 server=/ftcoaster.com/114.114.114.114
 server=/ftd.nz/114.114.114.114
+server=/ftdevice.com/114.114.114.114
 server=/ftesop.com/114.114.114.114
 server=/ftfast.com/114.114.114.114
 server=/ftfund.com/114.114.114.114
