accelerated-domains: add ftylw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31787,6 +31787,7 @@ server=/ftxad.com/114.114.114.114
 server=/ftxgame.com/114.114.114.114
 server=/ftxia.com/114.114.114.114
 server=/ftxsoccer.com/114.114.114.114
+server=/ftylw.com/114.114.114.114
 server=/ftzn.net/114.114.114.114
 server=/ftzx.com/114.114.114.114
 server=/fu-guan.com/114.114.114.114
