accelerated-domains: add fuda120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31805,6 +31805,7 @@ server=/fuchengshicai.com/114.114.114.114
 server=/fuchuangyu.com/114.114.114.114
 server=/fucnm.com/114.114.114.114
 server=/fucol.club/114.114.114.114
+server=/fuda120.com/114.114.114.114
 server=/fudaiapp.com/114.114.114.114
 server=/fudajishu.com/114.114.114.114
 server=/fudajn.com/114.114.114.114
