--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31806,6 +31806,7 @@ server=/fuchuangyu.com/114.114.114.114
 server=/fucnm.com/114.114.114.114
 server=/fucol.club/114.114.114.114
 server=/fuda120.com/114.114.114.114
+server=/fudaguangzhou.com/114.114.114.114
 server=/fudaiapp.com/114.114.114.114
 server=/fudajishu.com/114.114.114.114
 server=/fudajn.com/114.114.114.114
