--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31893,6 +31893,7 @@ server=/fun2ex.com/114.114.114.114
 server=/fun4go.com/114.114.114.114
 server=/funcdn.com/114.114.114.114
 server=/functionads.com/114.114.114.114
+server=/functionaltextilesshanghai.com/114.114.114.114
 server=/functioncool.com/114.114.114.114
 server=/fund001.com/114.114.114.114
 server=/fundebug.com/114.114.114.114
