accelerated-domains: add fybj.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32131,6 +32131,7 @@ server=/fyaaz.org/114.114.114.114
 server=/fyage.com/114.114.114.114
 server=/fyapi.net/114.114.114.114
 server=/fybiji.com/114.114.114.114
+server=/fybj.net/114.114.114.114
 server=/fybjsd.com/114.114.114.114
 server=/fyblogs.com/114.114.114.114
 server=/fybxw.com/114.114.114.114
