--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32246,6 +32246,7 @@ server=/fzslyy.com/114.114.114.114
 server=/fzswjt.com/114.114.114.114
 server=/fztheater.com/114.114.114.114
 server=/fzthinking.com/114.114.114.114
+server=/fzwater.com/114.114.114.114
 server=/fzwcn.com/114.114.114.114
 server=/fzwhzn.com/114.114.114.114
 server=/fzwtqx.com/114.114.114.114
