accelerated-domains: add gcl-power.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32738,6 +32738,7 @@ server=/gcjr.com/114.114.114.114
 server=/gcjy.info/114.114.114.114
 server=/gckychina.com/114.114.114.114
 server=/gcl-et.com/114.114.114.114
+server=/gcl-power.com/114.114.114.114
 server=/gclhgc.com/114.114.114.114
 server=/gcloudcs.com/114.114.114.114
 server=/gcloudgbs.com/114.114.114.114
