--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32800,6 +32800,7 @@ server=/gdbyhtl.net/114.114.114.114
 server=/gdbzkz.com/114.114.114.114
 server=/gdbzkz.org/114.114.114.114
 server=/gdcamis.com/114.114.114.114
+server=/gdcayyebh.com/114.114.114.114
 server=/gdcci.com/114.114.114.114
 server=/gdcct.com/114.114.114.114
 server=/gdcdsh.com/114.114.114.114
