accelerated-domains: add gdpdd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32904,6 +32904,7 @@ server=/gdokpackaging.com/114.114.114.114
 server=/gdomall.com/114.114.114.114
 server=/gdong.com/114.114.114.114
 server=/gdou.com/114.114.114.114
+server=/gdpdd.com/114.114.114.114
 server=/gdpengquan.com/114.114.114.114
 server=/gdpia.com/114.114.114.114
 server=/gdprm.com/114.114.114.114
