accelerated-domains: add gdshe.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32925,6 +32925,7 @@ server=/gdsdwan.com/114.114.114.114
 server=/gdsdyy.com/114.114.114.114
 server=/gdsgd.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
+server=/gdshe.org/114.114.114.114
 server=/gdslwl.com/114.114.114.114
 server=/gdspeedtest.com/114.114.114.114
 server=/gdsports.net/114.114.114.114
