--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32927,6 +32927,7 @@ server=/gdsgd.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
 server=/gdshe.org/114.114.114.114
 server=/gdskfz.com/114.114.114.114
+server=/gdskin.com/114.114.114.114
 server=/gdslwl.com/114.114.114.114
 server=/gdspeedtest.com/114.114.114.114
 server=/gdsports.net/114.114.114.114
