accelerated-domains: add gdsyy.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32939,6 +32939,7 @@ server=/gdswgc.com/114.114.114.114
 server=/gdswine.com/114.114.114.114
 server=/gdsxgd.com/114.114.114.114
 server=/gdsytech.com/114.114.114.114
+server=/gdsyy.org/114.114.114.114
 server=/gdszjgdj.org/114.114.114.114
 server=/gdszkw.com/114.114.114.114
 server=/gdszsl.com/114.114.114.114
