--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32988,6 +32988,7 @@ server=/gdydgj.com/114.114.114.114
 server=/gdygsk.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
+server=/gdylhp.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
 server=/gdyunyin.net/114.114.114.114
