--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33149,6 +33149,7 @@ server=/genban.org/114.114.114.114
 server=/gendan5.com/114.114.114.114
 server=/gendantong.com/114.114.114.114
 server=/genelinkout.com/114.114.114.114
+server=/generalichina.com/114.114.114.114
 server=/generalwatertech.com/114.114.114.114
 server=/genericfixer.com/114.114.114.114
 server=/generosbio.com/114.114.114.114
