--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33209,6 +33209,7 @@ server=/gequdaquan.net/114.114.114.114
 server=/gerenjianli.com/114.114.114.114
 server=/gerhard-china.com/114.114.114.114
 server=/geruihuate.com/114.114.114.114
+server=/geruisi-bio.com/114.114.114.114
 server=/gesanghua.org/114.114.114.114
 server=/gescosteel.com/114.114.114.114
 server=/gesdxashb1.fun/114.114.114.114
