accelerated-domains: add gjdk100.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33639,6 +33639,7 @@ server=/gjceshi9.com/114.114.114.114
 server=/gjcha.com/114.114.114.114
 server=/gjcoil.com/114.114.114.114
 server=/gjcweb.com/114.114.114.114
+server=/gjdk100.com/114.114.114.114
 server=/gjds.vip/114.114.114.114
 server=/gjdwzp.com/114.114.114.114
 server=/gjfmxd.com/114.114.114.114
