--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34077,6 +34077,7 @@ server=/gmyihua.com/114.114.114.114
 server=/gmzhushou.com/114.114.114.114
 server=/gmzi.com/114.114.114.114
 server=/gmzm.org/114.114.114.114
+server=/gmzx.com/114.114.114.114
 server=/gn168.com/114.114.114.114
 server=/gn301.xyz/114.114.114.114
 server=/gnber.com/114.114.114.114
