--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34131,6 +34131,7 @@ server=/gobanma.com/114.114.114.114
 server=/gobasearcher.com/114.114.114.114
 server=/gobelike.net/114.114.114.114
 server=/gobivc.com/114.114.114.114
+server=/gobroadhealthcare-sh.com/114.114.114.114
 server=/gobyd.com/114.114.114.114
 server=/gocarjourney.com/114.114.114.114
 server=/gocashback.com/114.114.114.114
