accelerated-domains: add gongbiaoku.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34264,6 +34264,7 @@ server=/gonever.com/114.114.114.114
 server=/gong-xin.com/114.114.114.114
 server=/gong123.com/114.114.114.114
 server=/gongbaike.com/114.114.114.114
+server=/gongbiaoku.com/114.114.114.114
 server=/gongboshi.com/114.114.114.114
 server=/gongcdn.com/114.114.114.114
 server=/gongchang.com/114.114.114.114
