accelerated-domains: add gonyn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34341,6 +34341,7 @@ server=/gongzuoshouji.net/114.114.114.114
 server=/gongzuoyun.org/114.114.114.114
 server=/gonsun.com/114.114.114.114
 server=/gonvvama.net/114.114.114.114
+server=/gonyn.com/114.114.114.114
 server=/goo17.com/114.114.114.114
 server=/gooagoo.com/114.114.114.114
 server=/gooann.com/114.114.114.114
