--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34765,6 +34765,7 @@ server=/gsfzb.com/114.114.114.114
 server=/gsgdsgh.cfd/114.114.114.114
 server=/gsgs10086.com/114.114.114.114
 server=/gsgundam.com/114.114.114.114
+server=/gshei.com/114.114.114.114
 server=/gshmzs.com/114.114.114.114
 server=/gshopper.com/114.114.114.114
 server=/gshqqcx.shop/114.114.114.114
