accelerated-domains: add gtac.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34848,6 +34848,7 @@ server=/gt-oil.com/114.114.114.114
 server=/gt-semi.com/114.114.114.114
 server=/gt47xc.com/114.114.114.114
 server=/gt520.com/114.114.114.114
+server=/gtac.cc/114.114.114.114
 server=/gtadata.com/114.114.114.114
 server=/gtags.net/114.114.114.114
 server=/gtan.com/114.114.114.114
