--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35001,6 +35001,7 @@ server=/guangbali.com/114.114.114.114
 server=/guangbao-uni.com/114.114.114.114
 server=/guangbo.net/114.114.114.114
 server=/guangcimh.com/114.114.114.114
+server=/guangdamr.com/114.114.114.114
 server=/guangdashuzi.com/114.114.114.114
 server=/guangdauser.com/114.114.114.114
 server=/guangdianyun.tv/114.114.114.114
