accelerated-domains: add guanghan-marathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35016,6 +35016,7 @@ server=/guangdv.com/114.114.114.114
 server=/guangfeng.com/114.114.114.114
 server=/guangfulingyuan.com/114.114.114.114
 server=/guanggao.com/114.114.114.114
+server=/guanghan-marathon.com/114.114.114.114
 server=/guanghe.tv/114.114.114.114
 server=/guanghuayigou.com/114.114.114.114
 server=/guangjie5u.com/114.114.114.114
