accelerated-domains: add guoturen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35410,6 +35410,7 @@ server=/guoshi.com/114.114.114.114
 server=/guoshusir.com/114.114.114.114
 server=/guosujt.com/114.114.114.114
 server=/guotailiangyou.com/114.114.114.114
+server=/guoturen.com/114.114.114.114
 server=/guotv.com/114.114.114.114
 server=/guowaidiaocha.com/114.114.114.114
 server=/guoweistem.com/114.114.114.114
