--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35556,6 +35556,7 @@ server=/gworg.com/114.114.114.114
 server=/gwoversea.com/114.114.114.114
 server=/gwozai.com/114.114.114.114
 server=/gwpdi.com/114.114.114.114
+server=/gwpp.net/114.114.114.114
 server=/gwpstools.com/114.114.114.114
 server=/gwsdns.com/114.114.114.114
 server=/gwtt.com/114.114.114.114
