accelerated-domains: add gxphc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36842,6 +36842,7 @@ server=/gxpgft.com/114.114.114.114
 server=/gxpggj.com/114.114.114.114
 server=/gxpghj.com/114.114.114.114
 server=/gxpgy.com/114.114.114.114
+server=/gxphc.com/114.114.114.114
 server=/gxphd.com/114.114.114.114
 server=/gxphj.com/114.114.114.114
 server=/gxpikaqiu.com/114.114.114.114
