accelerated-domains: add gxshuixie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37039,6 +37039,7 @@ server=/gxshua.com/114.114.114.114
 server=/gxshuairun.com/114.114.114.114
 server=/gxshudao.com/114.114.114.114
 server=/gxshuibao.com/114.114.114.114
+server=/gxshuixie.com/114.114.114.114
 server=/gxshunxiu.com/114.114.114.114
 server=/gxshwlw.com/114.114.114.114
 server=/gxshxc.com/114.114.114.114
