--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37677,6 +37677,7 @@ server=/gy.com/114.114.114.114
 server=/gy120.net/114.114.114.114
 server=/gy1688led.com/114.114.114.114
 server=/gy2025.com/114.114.114.114
+server=/gy3y.com/114.114.114.114
 server=/gy794c.com/114.114.114.114
 server=/gy7n.com/114.114.114.114
 server=/gy818.com/114.114.114.114
