accelerated-domains: add gylwyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37711,6 +37711,7 @@ server=/gylaq.com/114.114.114.114
 server=/gylcxo.xyz/114.114.114.114
 server=/gyljc.com/114.114.114.114
 server=/gylwgjsyxx.com/114.114.114.114
+server=/gylwyy.com/114.114.114.114
 server=/gym0boy.com/114.114.114.114
 server=/gymama.com/114.114.114.114
 server=/gymbo-online.com/114.114.114.114
