accelerated-domains: add gyrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37728,6 +37728,7 @@ server=/gyqqd.com/114.114.114.114
 server=/gyqrmyy.com/114.114.114.114
 server=/gyqzby.com/114.114.114.114
 server=/gyr.cc/114.114.114.114
+server=/gyrmyy.com/114.114.114.114
 server=/gyrsy.com/114.114.114.114
 server=/gyscw.com/114.114.114.114
 server=/gysdzy.com/114.114.114.114
