--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37755,6 +37755,7 @@ server=/gyxx365.com/114.114.114.114
 server=/gyyb.com/114.114.114.114
 server=/gyypw.com/114.114.114.114
 server=/gyyuli.com/114.114.114.114
+server=/gyyywcpx.com/114.114.114.114
 server=/gyzdh.com/114.114.114.114
 server=/gyzfbz.net/114.114.114.114
 server=/gyzsgd.com/114.114.114.114
