--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37805,6 +37805,7 @@ server=/gzbio.net/114.114.114.114
 server=/gzblssly.com/114.114.114.114
 server=/gzbote.com/114.114.114.114
 server=/gzbt020.com/114.114.114.114
+server=/gzbxyy120.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
 server=/gzch120.com/114.114.114.114
 server=/gzch12333.com/114.114.114.114
