accelerated-domains: add qdxgysy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67936,6 +67936,7 @@ server=/qdwenxue.com/114.114.114.114
 server=/qdxct.com/114.114.114.114
 server=/qdxfgy.com/114.114.114.114
 server=/qdxgn.com/114.114.114.114
+server=/qdxgysy.com/114.114.114.114
 server=/qdxhd.com/114.114.114.114
 server=/qdxhs.vip/114.114.114.114
 server=/qdxinhai.com/114.114.114.114
