--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100607,6 +100607,7 @@ server=/zjtxedu.org/114.114.114.114
 server=/zjtzcx.com/114.114.114.114
 server=/zjtzwater.com/114.114.114.114
 server=/zju88.org/114.114.114.114
+server=/zjubh.com/114.114.114.114
 server=/zjugis.com/114.114.114.114
 server=/zjujournals.com/114.114.114.114
 server=/zjukf.com/114.114.114.114
