--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75151,6 +75151,7 @@ server=/shunwang.com/114.114.114.114
 server=/shunwoit.com/114.114.114.114
 server=/shunxindt.com/114.114.114.114
 server=/shunyoubio.com/114.114.114.114
+server=/shunyuwater.com/114.114.114.114
 server=/shuo66.com/114.114.114.114
 server=/shuoba.org/114.114.114.114
 server=/shuobao.com/114.114.114.114
