--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38509,6 +38509,7 @@ server=/gztyre.com/114.114.114.114
 server=/gztyyedu.com/114.114.114.114
 server=/gztz.org/114.114.114.114
 server=/gztz120.com/114.114.114.114
+server=/gzu521.net/114.114.114.114
 server=/gzuc.net/114.114.114.114
 server=/gzucm-yhyy.com/114.114.114.114
 server=/gzuni.com/114.114.114.114
