--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95164,6 +95164,7 @@ server=/yj2nf.icu/114.114.114.114
 server=/yj36.com/114.114.114.114
 server=/yjai.art/114.114.114.114
 server=/yjbys.com/114.114.114.114
+server=/yjbzr.com/114.114.114.114
 server=/yjcard.com/114.114.114.114
 server=/yjcf360.com/114.114.114.114
 server=/yjcp.com/114.114.114.114
