--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85727,6 +85727,7 @@ server=/waterfallguilin.com/114.114.114.114
 server=/watergasheat.com/114.114.114.114
 server=/watergdd.com/114.114.114.114
 server=/waterlytech.com/114.114.114.114
+server=/watermc.org/114.114.114.114
 server=/watertek.com/114.114.114.114
 server=/watertu.com/114.114.114.114
 server=/watervmap.com/114.114.114.114
