--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13247,6 +13247,7 @@ server=/banxiayue.com/114.114.114.114
 server=/banyiyi.com/114.114.114.114
 server=/banyuetan.org/114.114.114.114
 server=/banyuetanapp.com/114.114.114.114
+server=/banyuetanedu.com/114.114.114.114
 server=/banyuetanxcx.com/114.114.114.114
 server=/banyunjuhe.com/114.114.114.114
 server=/banzhe.xyz/114.114.114.114
