accelerated-domains: add ysxzls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96464,6 +96464,7 @@ server=/ysxs8.com/114.114.114.114
 server=/ysxsw86.cc/114.114.114.114
 server=/ysxue.net/114.114.114.114
 server=/ysxyhtz.com/114.114.114.114
+server=/ysxzls.com/114.114.114.114
 server=/ysy.tm/114.114.114.114
 server=/ysys.com/114.114.114.114
 server=/ysyycv.com/114.114.114.114
