accelerated-domains: add ahssgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9793,6 +9793,7 @@ server=/ahsfdxrmyy.com/114.114.114.114
 server=/ahsj-group.com/114.114.114.114
 server=/ahsjxjy.com/114.114.114.114
 server=/ahslxzj.com/114.114.114.114
+server=/ahssgs.com/114.114.114.114
 server=/ahssnews.com/114.114.114.114
 server=/ahst123.com/114.114.114.114
 server=/ahsthzx.com/114.114.114.114
