accelerated-domains: add litree.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55854,6 +55854,7 @@ server=/litofu.com/114.114.114.114
 server=/litongsupply.com/114.114.114.114
 server=/litongtech.com/114.114.114.114
 server=/litpo.com/114.114.114.114
+server=/litree.com/114.114.114.114
 server=/litten.me/114.114.114.114
 server=/little-sun.com/114.114.114.114
 server=/littleboy.net/114.114.114.114
