accelerated-domains: add haiershui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38777,6 +38777,7 @@ server=/haier.hk/114.114.114.114
 server=/haier.net/114.114.114.114
 server=/haiercash.com/114.114.114.114
 server=/haiershequ.com/114.114.114.114
+server=/haiershui.com/114.114.114.114
 server=/haiersmarthomes.com/114.114.114.114
 server=/haierubic.com/114.114.114.114
 server=/haieruplus.com/114.114.114.114
