--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64393,6 +64393,7 @@ server=/nysenba.com/114.114.114.114
 server=/nysgjgs.com/114.114.114.114
 server=/nyshipyard.com/114.114.114.114
 server=/nyshszh.com/114.114.114.114
+server=/nyshui.com/114.114.114.114
 server=/nyxg.vip/114.114.114.114
 server=/nyxiecheng.com/114.114.114.114
 server=/nyxlzy.com/114.114.114.114
