--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67646,6 +67646,7 @@ server=/pyycz.com/114.114.114.114
 server=/pyygbj.com/114.114.114.114
 server=/pyynsm.com/114.114.114.114
 server=/pyzhbc.com/114.114.114.114
+server=/pyzls.com/114.114.114.114
 server=/pyzwy.com/114.114.114.114
 server=/pz6.com/114.114.114.114
 server=/pzcgw.com/114.114.114.114
