--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70214,6 +70214,7 @@ server=/qzt520.com/114.114.114.114
 server=/qztc.vip/114.114.114.114
 server=/qztour.com/114.114.114.114
 server=/qztsecurity.com/114.114.114.114
+server=/qztszls.com/114.114.114.114
 server=/qztvxwgj.com/114.114.114.114
 server=/qzwb.com/114.114.114.114
 server=/qzwgw.com/114.114.114.114
