accelerated-domains: add lyszls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57578,6 +57578,7 @@ server=/lysteel.com/114.114.114.114
 server=/lyswjt.com/114.114.114.114
 server=/lysy360.com/114.114.114.114
 server=/lysyzx.com/114.114.114.114
+server=/lyszls.com/114.114.114.114
 server=/lyszxyy.com/114.114.114.114
 server=/lythw.com/114.114.114.114
 server=/lytning.xyz/114.114.114.114
