accelerated-domains: add xianzilaishui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89963,6 +89963,7 @@ server=/xianzhice.com/114.114.114.114
 server=/xianzhid.com/114.114.114.114
 server=/xianzhongwang.com/114.114.114.114
 server=/xianzidaer.com/114.114.114.114
+server=/xianzilaishui.com/114.114.114.114
 server=/xiao-an.com/114.114.114.114
 server=/xiao-bo.com/114.114.114.114
 server=/xiao-new.com/114.114.114.114
