--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92278,6 +92278,7 @@ server=/xsu.cc/114.114.114.114
 server=/xsui.com/114.114.114.114
 server=/xswang.com/114.114.114.114
 server=/xswdcasting.com/114.114.114.114
+server=/xsxgjsw.com/114.114.114.114
 server=/xsxlt.com/114.114.114.114
 server=/xsxzls.com/114.114.114.114
 server=/xsy-edu.com/114.114.114.114
