accelerated-domains: add jianqimao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48342,6 +48342,7 @@ server=/jianqi88.com/114.114.114.114
 server=/jianqi88.mobi/114.114.114.114
 server=/jianqi88.net/114.114.114.114
 server=/jianqiaochina.com/114.114.114.114
+server=/jianqimao.com/114.114.114.114
 server=/jianqiyl.com/114.114.114.114
 server=/jianran360.com/114.114.114.114
 server=/jianshe99.com/114.114.114.114
