--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48061,6 +48061,7 @@ server=/jhqshfly.com/114.114.114.114
 server=/jhrcbank.com/114.114.114.114
 server=/jhsairport.com/114.114.114.114
 server=/jhsc201ddd211svds.com/114.114.114.114
+server=/jhscl.net/114.114.114.114
 server=/jhscm.com/114.114.114.114
 server=/jhscrm.com/114.114.114.114
 server=/jhsddjd.com/114.114.114.114
