accelerated-domains: add huanwenwen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43095,6 +43095,7 @@ server=/huante.com/114.114.114.114
 server=/huantest.com/114.114.114.114
 server=/huantour.com/114.114.114.114
 server=/huanwen.com/114.114.114.114
+server=/huanwenwen.com/114.114.114.114
 server=/huanxi.com/114.114.114.114
 server=/huanxia.com/114.114.114.114
 server=/huanxiangji.com/114.114.114.114
