accelerated-domains: add citicenvirotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20850,6 +20850,7 @@ server=/citicbank.com/114.114.114.114
 server=/citicbankuser.com/114.114.114.114
 server=/citiccard.com/114.114.114.114
 server=/citicdameng.com/114.114.114.114
+server=/citicenvirotech.com/114.114.114.114
 server=/citicguoanbn.com/114.114.114.114
 server=/citicnetworks.com/114.114.114.114
 server=/citics.com/114.114.114.114
