accelerated-domains: add xiantao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89943,6 +89943,7 @@ server=/xianshuabao.com/114.114.114.114
 server=/xianshufang.com/114.114.114.114
 server=/xiansimo.com/114.114.114.114
 server=/xiantao-marathon.com/114.114.114.114
+server=/xiantao.com/114.114.114.114
 server=/xianwucloud.com/114.114.114.114
 server=/xianxiadao.com/114.114.114.114
 server=/xianxiadao.net/114.114.114.114
