--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30367,6 +30367,7 @@ server=/fanlihi.com/114.114.114.114
 server=/fanlihotels.com/114.114.114.114
 server=/fanlitou.com/114.114.114.114
 server=/fanmeilantian.com/114.114.114.114
+server=/fanmimi.com/114.114.114.114
 server=/fanmugua.net/114.114.114.114
 server=/fannaojiputi.com/114.114.114.114
 server=/fanooo.com/114.114.114.114
