--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99683,6 +99683,7 @@ server=/zhongpingcapital.com/114.114.114.114
 server=/zhongpujiancai.com/114.114.114.114
 server=/zhongqingshao.com/114.114.114.114
 server=/zhongqixin360.com/114.114.114.114
+server=/zhongran.org/114.114.114.114
 server=/zhongrenbang.cc/114.114.114.114
 server=/zhongronglianhe.com/114.114.114.114
 server=/zhongruihuacheng.com/114.114.114.114
