accelerated-domains: add gyrqfd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38179,6 +38179,7 @@ server=/gyqrmyy.com/114.114.114.114
 server=/gyqzby.com/114.114.114.114
 server=/gyr.cc/114.114.114.114
 server=/gyrmyy.com/114.114.114.114
+server=/gyrqfd.com/114.114.114.114
 server=/gyrsy.com/114.114.114.114
 server=/gyscw.com/114.114.114.114
 server=/gysdzy.com/114.114.114.114
