accelerated-domains: add luchengas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57003,6 +57003,7 @@ server=/lubanu.com/114.114.114.114
 server=/lubiao.com/114.114.114.114
 server=/lubotv.com/114.114.114.114
 server=/luboyun.com/114.114.114.114
+server=/luchengas.com/114.114.114.114
 server=/luchentech.com/114.114.114.114
 server=/luchenwater.com/114.114.114.114
 server=/luchuang.com/114.114.114.114
