--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80322,6 +80322,7 @@ server=/tfeic.com/114.114.114.114
 server=/tff.bz/114.114.114.114
 server=/tfg2.com/114.114.114.114
 server=/tfgame.vip/114.114.114.114
+server=/tfgas.com/114.114.114.114
 server=/tfgvb.com/114.114.114.114
 server=/tfhj.com/114.114.114.114
 server=/tfidc.net/114.114.114.114
