--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18015,6 +18015,7 @@ server=/cdfmembers.com/114.114.114.114
 server=/cdfortis.com/114.114.114.114
 server=/cdfsunrise.com/114.114.114.114
 server=/cdfuwuqi.com/114.114.114.114
+server=/cdgas.com/114.114.114.114
 server=/cdgdad.com/114.114.114.114
 server=/cdggq.com/114.114.114.114
 server=/cdggzy.com/114.114.114.114
