accelerated-domains: add fzcrg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32603,6 +32603,7 @@ server=/fzbidding.com/114.114.114.114
 server=/fzbingo.com/114.114.114.114
 server=/fzccpit.org/114.114.114.114
 server=/fzcpos.com/114.114.114.114
+server=/fzcrg.com/114.114.114.114
 server=/fzcyjh.com/114.114.114.114
 server=/fzddg.com/114.114.114.114
 server=/fzdmag.com/114.114.114.114
