--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81244,6 +81244,7 @@ server=/tldczgs.com/114.114.114.114
 server=/tldrb.com/114.114.114.114
 server=/tlfw.net/114.114.114.114
 server=/tlfzkj.com/114.114.114.114
+server=/tlgas.com/114.114.114.114
 server=/tlhjjc.com/114.114.114.114
 server=/tlhmhd.com/114.114.114.114
 server=/tlightsky.com/114.114.114.114
