accelerated-domains: add gb55009.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33083,6 +33083,7 @@ server=/gaxrmyy.com/114.114.114.114
 server=/gaywb.com/114.114.114.114
 server=/gazemd.com/114.114.114.114
 server=/gb324.com/114.114.114.114
+server=/gb55009.com/114.114.114.114
 server=/gb5842.com/114.114.114.114
 server=/gbase8a.com/114.114.114.114
 server=/gbasebi.com/114.114.114.114
