accelerated-domains: add laxarq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54254,6 +54254,7 @@ server=/lawyerbridge.com/114.114.114.114
 server=/lawyermr.com/114.114.114.114
 server=/lawyerpass.com/114.114.114.114
 server=/lawyershanghai.net/114.114.114.114
+server=/laxarq.com/114.114.114.114
 server=/laxmok.com/114.114.114.114
 server=/layaair.com/114.114.114.114
 server=/layabox.com/114.114.114.114
