accelerated-domains: add bzrqfd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16922,6 +16922,7 @@ server=/bznx.net/114.114.114.114
 server=/bzonl.com/114.114.114.114
 server=/bzqmz.com/114.114.114.114
 server=/bzrb.net/114.114.114.114
+server=/bzrqfd.com/114.114.114.114
 server=/bzrtdl.com/114.114.114.114
 server=/bzsb.info/114.114.114.114
 server=/bzsoso.com/114.114.114.114
