accelerated-domains: add lvbogas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57275,6 +57275,7 @@ server=/lvbangdanbao.com/114.114.114.114
 server=/lvbeijingtour.com/114.114.114.114
 server=/lvbenma.com/114.114.114.114
 server=/lvbitte.com/114.114.114.114
+server=/lvbogas.com/114.114.114.114
 server=/lvcai.biz/114.114.114.114
 server=/lvcchong.com/114.114.114.114
 server=/lvchanghuanbao.com/114.114.114.114
