accelerated-domains: add lzrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57790,6 +57790,7 @@ server=/lzrimd.com/114.114.114.114
 server=/lzrkjx.com/114.114.114.114
 server=/lzrmzx.com/114.114.114.114
 server=/lzro.net/114.114.114.114
+server=/lzrq.com/114.114.114.114
 server=/lzry.com/114.114.114.114
 server=/lzsajzl.com/114.114.114.114
 server=/lzsansong.com/114.114.114.114
