accelerated-domains: add xyngas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93069,6 +93069,7 @@ server=/xymj.xyz/114.114.114.114
 server=/xymlcs.com/114.114.114.114
 server=/xynbnb.com/114.114.114.114
 server=/xynetweb.com/114.114.114.114
+server=/xyngas.com/114.114.114.114
 server=/xyniubi.com/114.114.114.114
 server=/xynsh.com/114.114.114.114
 server=/xyookj.com/114.114.114.114
