accelerated-domains: add xjxtrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91465,6 +91465,7 @@ server=/xjxbdh.xyz/114.114.114.114
 server=/xjxbx.com/114.114.114.114
 server=/xjxdf.com/114.114.114.114
 server=/xjxhdn.com/114.114.114.114
+server=/xjxtrq.com/114.114.114.114
 server=/xjxtxcy.com/114.114.114.114
 server=/xjy020.com/114.114.114.114
 server=/xjycn.net/114.114.114.114
