accelerated-domains: add 51ima.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4886,6 +4886,7 @@ server=/51ideal.com/114.114.114.114
 server=/51ifind.com/114.114.114.114
 server=/51ifonts.com/114.114.114.114
 server=/51ihome.com/114.114.114.114
+server=/51ima.com/114.114.114.114
 server=/51img1.com/114.114.114.114
 server=/51img2.com/114.114.114.114
 server=/51img3.com/114.114.114.114
