accelerated-domains: add myrqjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61573,6 +61573,7 @@ server=/myreadme.com/114.114.114.114
 server=/myrice.com/114.114.114.114
 server=/myriptide.com/114.114.114.114
 server=/myroome.com/114.114.114.114
+server=/myrqjt.com/114.114.114.114
 server=/myrrcar.cc/114.114.114.114
 server=/myrrcar.com/114.114.114.114
 server=/myrtb.net/114.114.114.114
