accelerated-domains: add hb-young.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39630,6 +39630,7 @@ server=/hb-jn.com/114.114.114.114
 server=/hb-ly.com/114.114.114.114
 server=/hb-water.com/114.114.114.114
 server=/hb-ws.com/114.114.114.114
+server=/hb-young.com/114.114.114.114
 server=/hb0561.com/114.114.114.114
 server=/hb0771.com/114.114.114.114
 server=/hb10000.com/114.114.114.114
