accelerated-domains: add csgasgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23342,6 +23342,7 @@ server=/csfreezer.com/114.114.114.114
 server=/csftyy.com/114.114.114.114
 server=/csfybjy.com/114.114.114.114
 server=/csg99.com/114.114.114.114
+server=/csgasgroup.com/114.114.114.114
 server=/csgcyy.com/114.114.114.114
 server=/csgfjc.com/114.114.114.114
 server=/csgjjt.com/114.114.114.114
