accelerated-domains: add scrqw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72591,6 +72591,7 @@ server=/scriptcat.org/114.114.114.114
 server=/scriptjc.com/114.114.114.114
 server=/scrm.so/114.114.114.114
 server=/scrmtech.com/114.114.114.114
+server=/scrqw.com/114.114.114.114
 server=/scrsw.net/114.114.114.114
 server=/scrsy.net/114.114.114.114
 server=/scrumcn.com/114.114.114.114
