accelerated-domains: add gas800.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33070,6 +33070,7 @@ server=/gas-analyzers.com/114.114.114.114
 server=/gas-scrubber.com/114.114.114.114
 server=/gas-turbine-parts.com/114.114.114.114
 server=/gas775.com/114.114.114.114
+server=/gas800.com/114.114.114.114
 server=/gasfw.com/114.114.114.114
 server=/gasgoo.com/114.114.114.114
 server=/gashr.com/114.114.114.114
