accelerated-domains: add scemrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72448,6 +72448,7 @@ server=/scedu.net/114.114.114.114
 server=/sceea.org/114.114.114.114
 server=/sceeo.com/114.114.114.114
 server=/scelc.com/114.114.114.114
+server=/scemrq.com/114.114.114.114
 server=/scenictc.com/114.114.114.114
 server=/scensmart.com/114.114.114.114
 server=/scfeihu.com/114.114.114.114
