accelerated-domains: add jdrq.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47822,6 +47822,7 @@ server=/jdpta.com/114.114.114.114
 server=/jdpz44.com/114.114.114.114
 server=/jdrns.com/114.114.114.114
 server=/jdrpr.com/114.114.114.114
+server=/jdrq.net/114.114.114.114
 server=/jds-china.com/114.114.114.114
 server=/jdsafe.com/114.114.114.114
 server=/jdsbnza.com/114.114.114.114
