accelerated-domains: add sxcitygas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78258,6 +78258,7 @@ server=/sxcd-gyl.com/114.114.114.114
 server=/sxchangshengjt.com/114.114.114.114
 server=/sxcig.com/114.114.114.114
 server=/sxcits.com/114.114.114.114
+server=/sxcitygas.com/114.114.114.114
 server=/sxcjys.com/114.114.114.114
 server=/sxclassiclighting.com/114.114.114.114
 server=/sxcm.net/114.114.114.114
