accelerated-domains: add scbnrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72287,6 +72287,7 @@ server=/scbaidu.com/114.114.114.114
 server=/scbao.com/114.114.114.114
 server=/scbgaudio.com/114.114.114.114
 server=/scbh15.com/114.114.114.114
+server=/scbnrq.com/114.114.114.114
 server=/scbotai.com/114.114.114.114
 server=/scbt.asia/114.114.114.114
 server=/scbxmr.com/114.114.114.114
