accelerated-domains: add shanxigas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73833,6 +73833,7 @@ server=/shanxiaobai.com/114.114.114.114
 server=/shanxichess.com/114.114.114.114
 server=/shanxidiy.com/114.114.114.114
 server=/shanxigames.com/114.114.114.114
+server=/shanxigas.com/114.114.114.114
 server=/shanxigwy.org/114.114.114.114
 server=/shanxihaoshengtong.com/114.114.114.114
 server=/shanxijianzhuzizhi.com/114.114.114.114
