accelerated-domains: add xjhjrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91428,6 +91428,7 @@ server=/xjgsdm.com/114.114.114.114
 server=/xjgwy.org/114.114.114.114
 server=/xjh.me/114.114.114.114
 server=/xjhgame.net/114.114.114.114
+server=/xjhjrq.com/114.114.114.114
 server=/xjhjsd.com/114.114.114.114
 server=/xjhr.com/114.114.114.114
 server=/xjhsxt.com/114.114.114.114
