accelerated-domains: add hhnykg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40947,6 +40947,7 @@ server=/hhkmls.com/114.114.114.114
 server=/hhl1916.com/114.114.114.114
 server=/hhmage.com/114.114.114.114
 server=/hhmajiang.com/114.114.114.114
+server=/hhnykg.com/114.114.114.114
 server=/hhnynews.com/114.114.114.114
 server=/hho-hawater.com/114.114.114.114
 server=/hhojs.com/114.114.114.114
