accelerated-domains: add hzrqgf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44495,6 +44495,7 @@ server=/hzredream.com/114.114.114.114
 server=/hzrib.com/114.114.114.114
 server=/hzrjkf.com/114.114.114.114
 server=/hzrobam.com/114.114.114.114
+server=/hzrqgf.com/114.114.114.114
 server=/hzrsl.com/114.114.114.114
 server=/hzs2sc.com/114.114.114.114
 server=/hzs360.com/114.114.114.114
