accelerated-domains: add ranqibiao.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70393,6 +70393,7 @@ server=/rankingonline.jp/114.114.114.114
 server=/ranknowcn.com/114.114.114.114
 server=/ranliao.biz/114.114.114.114
 server=/ranling.com/114.114.114.114
+server=/ranqibiao.net/114.114.114.114
 server=/rantu.com/114.114.114.114
 server=/ranwen.org/114.114.114.114
 server=/ranwena.com/114.114.114.114
