accelerated-domains: add ennenergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29284,6 +29284,7 @@ server=/enmonster.com/114.114.114.114
 server=/enmotech.com/114.114.114.114
 server=/enmuo.com/114.114.114.114
 server=/enn-ng.com/114.114.114.114
+server=/ennenergy.com/114.114.114.114
 server=/ennew.com/114.114.114.114
 server=/ennews.com/114.114.114.114
 server=/ennmt.com/114.114.114.114
