accelerated-domains: add fsgas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32068,6 +32068,7 @@ server=/fseport.com/114.114.114.114
 server=/fsesa.com/114.114.114.114
 server=/fsfsfz.com/114.114.114.114
 server=/fsfund.com/114.114.114.114
+server=/fsgas.com/114.114.114.114
 server=/fsgbly.com/114.114.114.114
 server=/fsgechao.com/114.114.114.114
 server=/fsggb.com/114.114.114.114
