accelerated-domains: add bjranqigz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15264,6 +15264,7 @@ server=/bjqtti.com/114.114.114.114
 server=/bjqyjjlb.com/114.114.114.114
 server=/bjqzhd.com/114.114.114.114
 server=/bjqzzh.net/114.114.114.114
+server=/bjranqigz.com/114.114.114.114
 server=/bjrc.com/114.114.114.114
 server=/bjrcb.com/114.114.114.114
 server=/bjrdhx.com/114.114.114.114
