accelerated-domains: add hanas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39021,6 +39021,7 @@ server=/hamptonboro.com/114.114.114.114
 server=/hamu.site/114.114.114.114
 server=/han-ju.cc/114.114.114.114
 server=/hanamichi.wiki/114.114.114.114
+server=/hanas.com/114.114.114.114
 server=/hanbaodawang.com/114.114.114.114
 server=/hanbige.com/114.114.114.114
 server=/hanboshi.com/114.114.114.114
