accelerated-domains: add gzgas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38327,6 +38327,7 @@ server=/gzfqyy.com/114.114.114.114
 server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
+server=/gzgas.com/114.114.114.114
 server=/gzgayy.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
