accelerated-domains: add rheemchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70928,6 +70928,7 @@ server=/rhce.cc/114.114.114.114
 server=/rhcqmu.com/114.114.114.114
 server=/rhctwy.com/114.114.114.114
 server=/rhcyl.com/114.114.114.114
+server=/rheemchina.com/114.114.114.114
 server=/rhexe.com/114.114.114.114
 server=/rhhz.net/114.114.114.114
 server=/rhine-inc.com/114.114.114.114
