accelerated-domains: add xjhtrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91452,6 +91452,7 @@ server=/xjhjrq.com/114.114.114.114
 server=/xjhjsd.com/114.114.114.114
 server=/xjhr.com/114.114.114.114
 server=/xjhsxt.com/114.114.114.114
+server=/xjhtrq.com/114.114.114.114
 server=/xjhuan.fun/114.114.114.114
 server=/xjhx120.com/114.114.114.114
 server=/xjhyktsp.com/114.114.114.114
