accelerated-domains: add orientalgas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65205,6 +65205,7 @@ server=/orgleaf.com/114.114.114.114
 server=/oriemac.com/114.114.114.114
 server=/orient-fund.com/114.114.114.114
 server=/orient-safety.com/114.114.114.114
+server=/orientalgas.com/114.114.114.114
 server=/orientalpearltower.com/114.114.114.114
 server=/orientalwisdom.com/114.114.114.114
 server=/orientcasa.com/114.114.114.114
