accelerated-domains: add chinagosun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19789,6 +19789,7 @@ server=/chinagoldcoin.net/114.114.114.114
 server=/chinagoldgroup.com/114.114.114.114
 server=/chinagongcheng.com/114.114.114.114
 server=/chinagoods.com/114.114.114.114
+server=/chinagosun.com/114.114.114.114
 server=/chinagp.net/114.114.114.114
 server=/chinagps.cc/114.114.114.114
 server=/chinagrandauto.com/114.114.114.114
