accelerated-domains: add chinamadas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19928,6 +19928,7 @@ server=/chinalure.com/114.114.114.114
 server=/chinalushan.com/114.114.114.114
 server=/chinaluxury.net/114.114.114.114
 server=/chinalxnet.com/114.114.114.114
+server=/chinamadas.com/114.114.114.114
 server=/chinamae.com/114.114.114.114
 server=/chinamags.org/114.114.114.114
 server=/chinamaincloud.com/114.114.114.114
